test_files/fails/t_non-productive.ar
let rec func_0 : 'a -> 'a = \x -> func_0 x;

let rec func_1 : int -> int = \i -> if i = 0 then 1 else (func_1 i);


console <- 1 :: never;